Fix incomplete documentation populated for Jollof and fried rice | updated info on index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/oil_beans.html" target="_blank">oil_beans</a></li>
-        <li><a href="recipes/oil_beans1.html" target="_blank">oil_beans1</a></li>
-        <li><a href="recipes/oil_beans2.html" target="_blank">oilbeans2</a></li>
+        <li><a href="recipes/oil_beans.html" target="_blank">Oil Beans</a></li>
+        <li><a href="recipes/jollof_rice.html" target="_blank">Jollof</a></li>
+        <li><a href="recipes/fried_rice.html" target="_blank">Fried Rice</a></li>
     </ul>
 </body>
 </html>
