Fix Alt field for fried rice

--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Fried Rice Recipe</h1>
-    <img src="https://thumbs.dreamstime.com/b/ewa-brown-honey-beans-palm-oil-delicious-staple-food-most-west-african-countries-particularly-nigeria-one-made-119606864.jpg?w=768" alt="Beans made with palmoil">
+    <img src="https://www.onceuponachef.com/images/2023/12/Fried-Rice-Hero-12-760x1013.jpg" alt="Fried Rice">
 
     <p>
         This is one of Nigeria's staple meal. It is very rich in fiber, carbonhydrates, vitamins and proteins, and a very rich list of benefits that will be discussed later below.
